@@ -43,13 +43,13 @@ struct _SquashBuffer {
 
 SquashBuffer* squash_buffer_new            (size_t preallocated_len);
 SQUASH_NONNULL(1)
-void          squash_buffer_append         (SquashBuffer* buffer, size_t data_length, uint8_t data[SQUASH_ARRAY_PARAM(data_length)]);
+bool          squash_buffer_append         (SquashBuffer* buffer, size_t data_length, uint8_t data[SQUASH_ARRAY_PARAM(data_length)]);
 SQUASH_NONNULL(1)
 void          squash_buffer_clear          (SquashBuffer* buffer);
 SQUASH_NONNULL(1)
 void          squash_buffer_free           (SquashBuffer* buffer);
 SQUASH_NONNULL(1)
-void          squash_buffer_set_size       (SquashBuffer* buffer, size_t length);
+bool          squash_buffer_set_size       (SquashBuffer* buffer, size_t length);
 
 SQUASH_END_DECLS
 
